fix(disco): use external image repository
this chart is used externally as well as internally
the default repository should be the one externally available

--- a/system/disco/values.yaml
+++ b/system/disco/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: keppel.global.cloud.sap/ccloud-ghcr-io-mirror/sapcc/disco
+  repository: ghcr.io/sapcc/disco
   tag: 7b34432
 
 # Only an ingress with this annotation will be considered.
